# CMakeTutorials

package_00/package_example/: CMakeLists.txt
package_00/package_example/cmake/: MyLibConfig.cmake.in
package_00/test_myLib/: CMakeLists.txt  main.cpp
package_example/: CMakeLists.txt
package_example/cmake/: MyLibConfig.cmake.in  UseMyLib.cmake
package_example/include/: mylib.h
